--- a/index.html
+++ b/index.html
@@ -1592,6 +1592,7 @@
 				});
 			});
 
+			//Log window closure
 			window.addEventListener('beforeunload', function (event) {
 				console.log('end of session');
 			});
