--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
 					// Send to Google Sheet
 					const timestamp = new Date().toISOString();
-					const encodedMessage = encodeURIComponent(deviceName+interactionMode+"["+latitude+","+longitude+"]:"+"["+consoleMessage+"]");
+					const encodedMessage = encodeURIComponent("["+deviceName+interactionMode+"]["+latitude+","+longitude+"] LOG -- "+consoleMessage);
 					const encodedTimestamp = encodeURIComponent(timestamp);
 
 					const scriptURL = `https://script.google.com/macros/s/AKfycby6eO3XkdctRamMRPRJ3v6Xh9dCdrssFONmCk56VUSJd8h70autXFXVKITDG-O_8wN1/exec?timestamp=${encodedTimestamp}&message=${encodedMessage}`;
@@ -350,12 +350,32 @@
 					}).catch(err => originalConsoleError('Failed to log to sheet:', err));
 				};
 
+				// Override console.error to append error messages to the div.
+				console.error = function(...args) {
+					originalConsoleError(...args);
+					var errorMessage = args.map(arg => typeof arg === 'object' ? JSON.stringify(arg) : arg).join(' ');
+					errorMessages.push("<strong>ERROR:</strong> " + errorMessage);
+					updateConsoleOutput();
+
+					// Send error to Google Sheet
+					const timestamp = new Date().toISOString();
+					const encodedMessage = encodeURIComponent("["+deviceName+interactionMode+"]["+latitude+","+longitude+"] ERROR -- "+errorMessage);
+					const encodedTimestamp = encodeURIComponent(timestamp);
+
+					const scriptURL = `https://script.google.com/macros/s/AKfycby6eO3XkdctRamMRPRJ3v6Xh9dCdrssFONmCk56VUSJd8h70autXFXVKITDG-O_8wN1/exec?timestamp=${encodedTimestamp}&message=${encodedMessage}`;
+					fetch(scriptURL, {
+						method: 'GET',
+						mode: 'no-cors'
+					}).catch(err => originalConsoleError('Failed to log error to sheet:', err));
+				};
+
 				function updateConsoleOutput() {
 					var combinedMessages = logMessages.concat(errorMessages);
 					var lastTwoMessages = combinedMessages.slice(-2);
 					consoleOutputDiv.innerHTML = lastTwoMessages.map(msg => '<div class="log">' + msg + '</div>').join('');
 				}
 			}
+
 
 			// Call the function to redirect console.log and console.error to the div
 			redirectConsoleToDiv();
