--- a/index.html
+++ b/index.html
@@ -974,6 +974,7 @@
 			let currentSound = null;
 
 			function speakMessage(fullMessage) {
+				console.log(fullMessage);
 				if (speakFancy) {
 					speakMessage_azure(fullMessage);
 				} else {
