--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 
 					// Send to Google Sheet
 					const timestamp = new Date().toISOString();
-					const encodedMessage = encodeURIComponent("["+deviceName+interactionMode+"]["+latitude+","+longitude+"] LOG -- "+consoleMessage);
+					const encodedMessage = encodeURIComponent("["+deviceName+interactionMode+"]\t["+latitude+","+longitude+"]\t LOG -- "+consoleMessage);
 					const encodedTimestamp = encodeURIComponent(timestamp);
 
 					const scriptURL = `https://script.google.com/macros/s/AKfycby6eO3XkdctRamMRPRJ3v6Xh9dCdrssFONmCk56VUSJd8h70autXFXVKITDG-O_8wN1/exec?timestamp=${encodedTimestamp}&message=${encodedMessage}`;
@@ -359,7 +359,7 @@
 
 					// Send error to Google Sheet
 					const timestamp = new Date().toISOString();
-					const encodedMessage = encodeURIComponent("["+deviceName+interactionMode+"]["+latitude+","+longitude+"] ERROR -- "+errorMessage);
+					const encodedMessage = encodeURIComponent("["+deviceName+interactionMode+"]\t["+latitude+","+longitude+"]\t ERROR -- "+errorMessage);
 					const encodedTimestamp = encodeURIComponent(timestamp);
 
 					const scriptURL = `https://script.google.com/macros/s/AKfycby6eO3XkdctRamMRPRJ3v6Xh9dCdrssFONmCk56VUSJd8h70autXFXVKITDG-O_8wN1/exec?timestamp=${encodedTimestamp}&message=${encodedMessage}`;
