--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
 									src: [sounds[key].src],
 									volume: 0.4,
 									onload: soundLoaded, // Call soundLoaded() when sound is loaded successfully
-									onloaderror: function(error) { console.error('Error loading resources:', error); }
+									onloaderror: function(error) { console.error('Error loading audio resources:', error); }
 								});
 							}
 						}
 					} else {
-						console.error('Failed to load resources.');
+						console.error('Failed to load audio resources.');
 						hideLoadingScreen(); // Hide loading screen on failure to load sounds
 					}
 				} catch (error) {
@@ -268,7 +268,7 @@
 						}, 4000);
 					}
 				} catch (error) {
-					console.error("Error connecting/disconnecting: " + error);
+					console.error("Error connecting/disconnecting to device: " + error);
 				}
 			}
 			// Attach click event listener to button.
@@ -300,7 +300,7 @@
 								console.error('Failed to activate wake lock:', err);
 							});
 						} else {
-							console.warn('Wake lock API not supported.');
+							console.error('Wake lock API not supported.');
 						}
 			}
 
@@ -375,7 +375,6 @@
 					consoleOutputDiv.innerHTML = lastTwoMessages.map(msg => '<div class="log">' + msg + '</div>').join('');
 				}
 			}
-
 
 			// Call the function to redirect console.log and console.error to the div
 			redirectConsoleToDiv();
@@ -837,7 +836,7 @@
 								try {
 									eval(functionToEval); // Run the function using eval()
 								} catch (error) {
-									console.error("Error executing function: " + error);
+									console.error("Error executing displayText function: " + error);
 								}
 							}
 						} else { // Handle the case where there's no third delimiter
@@ -1249,12 +1248,12 @@
 
 						} else {
 							window.alert_Sound.play();
-							console.error('Tag information not found.');
+							console.error('Tag '+tagID+' information not found.');
 							return;
 						}
 					}
 				} catch (err) {
-					console.error('Error reading tag:', err);
+					console.error('Error reading tag', err);
 				}
 			}
 
