--- a/index.html
+++ b/index.html
@@ -155,6 +155,7 @@
 
 			// Event listener for when the page's DOM content is fully loaded
 			document.addEventListener('DOMContentLoaded', function() {
+				console.log("Initializing resources.");
 				initializeSounds();
 			});
 
