--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 					originalConsoleError(...args);
 					var errorMessage = args.map(arg => typeof arg === 'object' ? JSON.stringify(arg) : arg).join(' ');
 					errorMessages.push("<strong>ERROR:</strong> " + errorMessage);
-					//updateConsoleOutput();
+					updateConsoleOutput();
 
 					// Send error to Google Sheet
 					const timestamp = new Date().toISOString();
