--- a/index.html
+++ b/index.html
@@ -340,10 +340,12 @@
 
 					// Send to Google Sheet
 					const timestamp = new Date().toISOString();
-					const encodedMessage = encodeURIComponent("["+deviceName+interactionMode+"]\t["+latitude+","+longitude+"]\t LOG -- "+consoleMessage);
+					const encodedMessage = encodeURIComponent(consoleMessage);
+					const encodedAgent = encodeURIComponent(deviceName+interactionMode);
+					const encodedLocation = encodeURIComponent(latitude+","+longitude);
 					const encodedTimestamp = encodeURIComponent(timestamp);
 
-					const scriptURL = `https://script.google.com/macros/s/AKfycby6eO3XkdctRamMRPRJ3v6Xh9dCdrssFONmCk56VUSJd8h70autXFXVKITDG-O_8wN1/exec?timestamp=${encodedTimestamp}&message=${encodedMessage}`;
+					const scriptURL = `https://script.google.com/macros/s/AKfycby6eO3XkdctRamMRPRJ3v6Xh9dCdrssFONmCk56VUSJd8h70autXFXVKITDG-O_8wN1/exec?timestamp=${encodedTimestamp}&agent=${encodedAgent}&location=${encodedLocation}message=${encodedMessage}`;
 					fetch(scriptURL, {
 						method: 'GET',
 						mode: 'no-cors'
