--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 					const encodedLocation = encodeURIComponent(latitude+","+longitude);
 					const encodedTimestamp = encodeURIComponent(timestamp);
 
-					const scriptURL = `https://script.google.com/macros/s/AKfycbxbwHHklC730Jm_FiXqExnOxL7uY2k31VnsG5fJS-V8SiMRzKwccUWQ_YqenYsLRbLM/exec?timestamp=${encodedTimestamp}&agent=${encodedAgent}&location=${encodedLocation}message=${encodedMessage}`;
+					const scriptURL = `https://script.google.com/macros/s/AKfycbxbwHHklC730Jm_FiXqExnOxL7uY2k31VnsG5fJS-V8SiMRzKwccUWQ_YqenYsLRbLM/exec?timestamp=${encodedTimestamp}&agent=${encodedAgent}&location=${encodedLocation}&message=${encodedMessage}`;
 					fetch(scriptURL, {
 						method: 'GET',
 						mode: 'no-cors'
