--- a/index.html
+++ b/index.html
@@ -346,8 +346,7 @@
 					const encodedTimestamp = encodeURIComponent(timestamp);
 					const encodedType = "LOG";
 
-
-					const scriptURL = `https://script.google.com/macros/s/AKfycbztB_JQGu6AqxJ0wfiTub_4SILT5clixIA1rfE36fB0aNXC7CiQSweDHRiBJEEIYu3i/exec?timestamp=${encodedTimestamp}&agent=${encodedAgent}&location=${encodedLocation}&message=${encodedMessage}`;
+					const scriptURL = `https://script.google.com/macros/s/AKfycbztB_JQGu6AqxJ0wfiTub_4SILT5clixIA1rfE36fB0aNXC7CiQSweDHRiBJEEIYu3i/exec?timestamp=${encodedTimestamp}&agent=${encodedAgent}&type=${encodedType}&location=${encodedLocation}&message=${encodedMessage}`;
 					fetch(scriptURL, {
 						method: 'GET',
 						mode: 'no-cors'
