--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
 					// Check if partMoving or directionMoving are different from their previous values and add movement to the sequence buffer.
 					if (partMoving !== previousPart || directionMoving !== previousDirection) {
 						// Add movement to the sequence buffer
-						console.log(partMoving+" "+directionMoving);
+						console.log("--Movement: "+partMoving+" "+directionMoving);
 						if (noNarrative){
 							window.success_Sound.play();
 							//displayText("Avatar's"+ partMoving+" "+directionMoving);
@@ -813,7 +813,7 @@
 
 				if (delimiterIndex !== -1) { // Check if the first delimiter exists
 					messageID_tmp = message.substring(0, delimiterIndex); // Store the message ID
-					console.log("--PASSAGE: "+messageID_tmp);
+					console.log("--Passage: "+messageID_tmp);
 					var secondDelimiterIndex = message.indexOf("/", delimiterIndex + 1); // Find the index of the second delimiter "/"
 
 					if (secondDelimiterIndex !== -1 && secondDelimiterIndex !== delimiterIndex) { // Check if the second delimiter exists
