--- a/index.html
+++ b/index.html
@@ -1090,8 +1090,8 @@
 									window.notification_Sound.play(); // Play the notification sound after a delay
 									console.log(deviceName + " end speaking");
 									speaking = false;
-									messageDisplayDiv.textContent = "";
-									messageDisplayDiv.style.display = "none";
+									messageDisplayDiv.textContent = ""; //Clear speaking text in displayMessage
+									messageDisplayDiv.style.display = "none"; //Hide speaking text displayMessage
 									sound.unload(); // Unload the audio object to free up resources
 									playAction = false; // Reset playAction to false
 								}, 500); // Delay of 500 milliseconds
